fixed nav jump tp section issue. After pressing link such as services on about section, the nav bar was cutting half of the title off. I added padding to each section title and looks great now

--- a/src/components/About/styles.css
+++ b/src/components/About/styles.css
@@ -2,10 +2,11 @@
   border: 2px black solid;
 }
 
-#about-header {
+#about-title {
   color: black;
   margin-top: 60px;
   text-align: center;
+  padding-top: 20px;
 }
 
 #about-p {
