--- a/src/components/Contact/styles.css
+++ b/src/components/Contact/styles.css
@@ -24,10 +24,11 @@
   text-align: left;
 }
 
-#contact-header {
+#contact-title {
   color: black;
   margin-top: 60px;
   margin-bottom: 10px;
+  padding-top: 20px;
   text-align: center;
 }
 
