--- a/src/components/Services/styles.css
+++ b/src/components/Services/styles.css
@@ -3,6 +3,7 @@
   margin-top: 60px;
   margin-bottom: 10px;
   text-align: center;
+  padding-top: 20px;
 }
 
 #services-p {
